@@ -21,7 +21,7 @@
 	url = https://github.com/trivial-gray-streams/trivial-gray-streams.git
 [submodule "ext/flexi-streams"]
 	path = ext/flexi-streams
-	url = https://github.com/edicl/flexi-streams.git
+	url = https://github.com/daewok/flexi-streams.git
 [submodule "ext/cl-ppcre"]
 	path = ext/cl-ppcre
 	url = https://github.com/edicl/cl-ppcre.git
@@ -156,7 +156,7 @@
 	url = https://notabug.org/cage/cl-colors2.git
 [submodule "ext/dexador"]
 	path = ext/dexador
-	url = https://github.com/fukamachi/dexador.git
+	url = https://github.com/daewok/dexador.git
 [submodule "ext/quri"]
 	path = ext/quri
 	url = https://github.com/fukamachi/quri.git
@@ -184,3 +184,6 @@
 [submodule "ext/esrap"]
 	path = ext/esrap
 	url = https://github.com/scymtym/esrap.git
+[submodule "ext/clpm-multi-http-client"]
+	path = ext/clpm-multi-http-client
+	url = https://gitlab.common-lisp.net/clpm/clpm-multi-http-client.git
