@@ -1,5 +1,11 @@
 #+TITLE: CLPM Changelog
 
+* Unreleased
+
+  + Pull HTTP client into separate library
+    (=clpm-multi-http-client=). Additionally, this library supports connection
+    pooling with Drakma, so make Drakma the default on non Windows platforms.
+
 * v0.2.1 - 2020-04-05
 
   + Rebind =*debugger-hook*= so that CLPM never drops into debugger.
